fix(shelf): title spacing

--- a/styles/scss/vtex.slider-layout.scss
+++ b/styles/scss/vtex.slider-layout.scss
@@ -102,7 +102,7 @@
 }
 .sliderLayoutContainer--main-slider-home2 {
   @media screen and (max-width: 768px) {
-    padding: 60px 0;
+    padding: 0;
   }
 }
 .sliderLayoutContainer--main-slider-home2-tab {
